Fixed z-index issue with settings

--- a/react/src/SettingsWidget.css
+++ b/react/src/SettingsWidget.css
@@ -8,7 +8,7 @@
   border-width: 1px;
   box-shadow: 3px 3px 10px 3px #444444;
   overflow: hidden;
-  z-index: 1;
+  z-index: 300;
 }
 
 .settings-inner {
